# cascade-crypt

./: .gitignore  .review-2.txt.kate-swp  CHANGELOG.md  Cargo.toml  LICENSE  README.md  USAGE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cipher_decrypt.rs  fuzz_encoder_decode.rs  fuzz_header_encrypted.rs  fuzz_header_parse.rs
src/: cascade.rs  chunked.rs  encoder.rs  header.rs  hybrid.rs  lib.rs  main.rs  memlock.rs
src/buffer/: mod.rs  secure_temp.rs
src/crypto/: aes256.rs  aria_cipher.rs  blowfish_cipher.rs  camellia.rs  cast5_cipher.rs  chacha.rs  idea_cipher.rs  kuznyechik_cipher.rs  mod.rs  serpent.rs  sm4_cipher.rs  tripledes.rs  twofish.rs  xchacha.rs
tests/: e2e.rs
