[package]
name = "cascade-crypt"
version = "0.1.0"
edition = "2021"
description = "Cascading binary encryption with user-controlled algorithm ordering"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Encryption - Block ciphers (RustCrypto ecosystem, cipher 0.4)
aes-gcm = "0.10"
des = "0.8"
twofish = "0.7"
serpent = "0.5"
camellia = "0.1"
blowfish = "0.9"
cast5 = "0.11"
idea = "0.5"
aria = "0.1"
sm4 = "0.5"
kuznyechik = "0.8"

# New ciphers (cipher 0.4 compatible)
kisaseed = "0.1"

# Legacy cipher crates (need custom wrappers)
threefish-cipher = "0.4"          # cipher 0.2 - custom impl

# Encryption - Stream ciphers
chacha20poly1305 = "0.10"

# Encryption - Common
cbc = "0.1"
cipher = { version = "0.4", features = ["alloc"] }
block-padding = "0.3"

# Key derivation
argon2 = "0.5"
hkdf = "0.12"

# Hashing
sha2 = "0.10"

# Asymmetric encryption (hybrid X25519 + Kyber)
x25519-dalek = { version = "2", features = ["static_secrets"] }
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
base64 = "0.22"

# Random
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Password input
rpassword = "7"

# Progress bar
indicatif = "0.17"
