[package]
name = "cascrypt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cascrypt]
path = ".."

[[bin]]
name = "fuzz_header_parse"
path = "fuzz_targets/fuzz_header_parse.rs"
doc = false

[[bin]]
name = "fuzz_header_encrypted"
path = "fuzz_targets/fuzz_header_encrypted.rs"
doc = false

[[bin]]
name = "fuzz_encoder_decode"
path = "fuzz_targets/fuzz_encoder_decode.rs"
doc = false

[[bin]]
name = "fuzz_cipher_decrypt"
path = "fuzz_targets/fuzz_cipher_decrypt.rs"
doc = false

[workspace]
members = ["."]
